# msprof_agent

./: .gitignore  README.md  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
examples/: README.md  simple_mcp_server.py
src/msagent/: __init__.py  agent.py  cli.py  config.py  llm.py  mcp_client.py  tui.py
src/msprof_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  mcp_client.py  tui.py
tests/: __init__.py  test_config.py
