[project]
name = "msprof-agent"
version = "0.1.0"
description = "MSProf Agent - A CLI agent with MCP support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.52.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.6.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "anyio>=4.2.0",
    "mcp>=1.0.0",
]

[project.scripts]
msprof = "msprof_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msprof_agent"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
