[project]
name = "msagent"
description = "msAgent - A CLI agent with MCP support"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.52.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pyperclip>=1.11.0",
    "msprof-mcp",  # 添加 msprof-mcp 作为依赖
]

[project.scripts]
msagent = "msagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msagent"]

[tool.hatch.version]
path = "src/msagent/version.py"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

